kubernetes/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fampay-ingress
  namespace: fampay
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hodr(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hodr
                port:
                  number: 8888
          - path: /bran(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bran
                port:
                  number: 8000
